--- a/maven/DevOpsBKK2018/Jenkinsfile
+++ b/maven/DevOpsBKK2018/Jenkinsfile
@@ -48,6 +48,14 @@ mavenNode{
       itestPattern = localItestPattern
     }
 
+    stage 'Approve'
+    approve {
+      room = micro
+      version = canaryVersion
+      console = fabric8Console
+      environment = 'Staging'
+    }
+
     stage('Send Notification'){
       acnSendAlertToWebhook {
         urlWebhook = "https://chat.googleapis.com/v1/spaces/AAAA764gDZk/messages?key=AIzaSyDdI0hCZtE6vySjMm-WEfRq3CPzqKqqsHI&token=ME5EjucS4vsPmFKeq70N4V-LxniLOT5XZaUfpVjt6Yk%3D"
